--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,11 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: sans-serif;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  letter-spacing: 0.4px;
+  line-height: 130%;
+  color: #404040;
 }
 
 h1,
